--- a/app/src/components/toolbars/default.tmpl.scss
+++ b/app/src/components/toolbars/default.tmpl.scss
@@ -2,14 +2,7 @@
   md-icon {
     color: inherit;
     .md-font {
-      font-size: 2.400rem;
-      display: block;
       color: inherit;
-    }
-  }
-  .breadcrumb {
-    md-icon {
-      height: 28px;
     }
   }
 }
